fix(theme selector): cute little vertical theme selector on small screens

--- a/client/src/components/ThemeSelector.module.css
+++ b/client/src/components/ThemeSelector.module.css
@@ -13,6 +13,7 @@
   align-items: center;
 }
 
+
 .themeButton {
   position: relative;
   display: flex;
@@ -70,4 +71,32 @@
   color: var(--text-primary);
   filter: none;
   transform: translateY(-1px);
+}
+
+
+@media (max-width: 450px) {
+  .buttonGroup {
+    flex-direction: column;
+    gap: 0px;
+  }
+
+  .themeSelectorCard {
+
+    /* padding: 1px 2px; */
+    /* reduced from 2px 4px */
+    left: calc(50% + 80px);
+    /* reduced offset since header will be smaller too */
+  }
+
+  .themeButton {
+    padding: 0px;
+    min-width: 19px;
+    min-height: 19px;
+
+  }
+
+  .themeButton svg {
+    width: 13px;
+    height: 13px;
+  }
 }
